--- a/src/scss/40_global.scss
+++ b/src/scss/40_global.scss
@@ -2,8 +2,14 @@ html, body {
   @include small {
     font-size: 2.5vw;
   }
+  
+  @include medium {
+    font-size: 1.11vw;
+  }
 
-  font-size: 16px;
+  @include large {
+    font-size: 16px;
+  }
 }
 
 #app {
